# codebase-contextifier-9000

./: .dockerignore  .gitignore  .mcp.json  .mcp.json.template  CLAUDE.md  Dockerfile  Dockerfile.indexer  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: languages.json
docs/: AST_codeChunking.md  FILE_WATCHER.md  QUICKSTART.md  README.md  oneshot.md
scripts/: indexer.py  setup.sh
src/: server.py
src/graph_db/: __init__.py  neo4j_client.py
src/indexer/: ast_chunker.py  dependency_detector.py  embeddings.py  file_watcher.py  grammars.py  job_manager.py  knowledge_indexer.py  merkle_tree.py  models.py  relationship_extractors.py
src/tools/: index_tool.py  search_tool.py  symbol_tool.py
src/vector_db/: knowledge_db.py  qdrant_client.py
