[project]
name = "codebase-contextifier-9000"
version = "0.1.0"
description = "AST-aware semantic code search MCP server with local LLM support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Armentor", email = "jonathan@jonathanarmentor.dev" },
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "qdrant-client>=1.7.0",
    "ollama>=0.1.0",
    "httpx>=0.24.0",
    "tree-sitter>=0.20.0",
    "blake3>=0.3.0",
    "watchdog>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gitignore-parser>=0.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
